# waifu_image_tagger

./: .gitignore  Cargo.toml  README.md  config.json  config_example.json  massif.out.15876  massif.out.2007  massif.out.28265
.github/workflows/: rust.yml
src/: main.rs
tests/: table  table.json
