[package]
name = "waifu_image_tagger"
version = "0.4.0"
authors = ["hako"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexiv2 = "*"
serde_json = "*"
reqwest = { version = "*", features = ["blocking", "json", "multipart"] }
clap = "*"