[package]
name = "waifu_image_tagger"
version = "0.5.1"
authors = ["hako"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexiv2 = "*"
serde_json = "*"
reqwest = { version = "*", features = ["blocking", "json", "multipart"] }
clap = { version = "*", features = ["derive"] }
config = "*"
ignore = "*"